--- a/index.html
+++ b/index.html
@@ -112,16 +112,16 @@
                 <h3 class="light center grey-text text-darken-3">Hobby</h3>
                 <div class="col m6 s12">
                     <div class="card-panel center">
-                        <i class="material-icons medium">desktop_windows</i>
-                        <h5>Web Development</h5>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, itaque.</p>
+                        <i class="material-icons medium">sports_volleyball</i>
+                        <h5>VolleyBall</h5>
+                        <p>Bagi saya sendiri bermain volleyball untuk kesenangan dan cukup untuk menyehatkan badan.</p>
                     </div>
                 </div>
                 <div class="col m6 s12">
                     <div class="card-panel center">
-                        <i class="material-icons medium">games</i>
+                        <i class="material-icons medium">sports_esports</i>
                         <h5>Play Game</h5>
-                        <p>Menurut saya bermain game sangat menyenangkan bagi saya sendiri</p>
+                        <p>Menurut saya bermain game sangat menyenangkan bagi saya sendiri.</p>
                     </div>
                 </div>
             </div>
@@ -174,7 +174,7 @@
                     <div class="card-panel red darken-4 center white-text">
                         <i class="material-icons">email</i>
                         <h5>Contact</h5>
-                        <p>Jika ada yang ingin ditanyakan, harap mengisikan form di samping</p>
+                        <p>Jika ada yang ingin ditanyakan, harap mengisikan form yang ada</p>
                     </div>
                     <ul class="collection with-header">
                         <li class="collection-header"><h4>Alamat</h4></li>
